--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "scripts": {
     "start": "json-server --port 3010 --watch api.json"
   },
-  "keywords": ["react challenge", "tryouts", "react developer", "hiring"],
+  "keywords": [
+    "react challenge",
+    "tryouts",
+    "react developer",
+    "hiring"
+  ],
   "author": "Adapt A/S",
   "license": "ISC",
   "devDependencies": {
     "json-server": "0.10.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1"
   }
 }
