--- a/package.json
+++ b/package.json
@@ -1,14 +1,37 @@
 {
-  "name": "react-coding-challenge",
-  "version": "1.0.0",
-  "description": "A package containing a simple dummy book API, which should be used in the challenge",
-  "scripts": {
-    "start": "json-server --port 3010 --watch api.json"
+  "name": "react-books",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "json-server": "^0.15.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.0.1",
+    "redux-promise-middleware": "^6.1.1",
+    "redux-thunk": "^2.3.0"
   },
-  "keywords": ["react challenge", "tryouts", "react developer", "hiring"],
-  "author": "Adapt A/S",
-  "license": "ISC",
-  "devDependencies": {
-    "json-server": "0.10.1"
+  "scripts": {
+  	"startServer": "json-server --port 3010 --watch api.json",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
