--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "A package containing a simple dummy book API, which should be used in the challenge",
   "scripts": {
-    "start": "json-server --port 3010 --watch api.json"
+    "server": "json-server --port 3010 --watch api.json",
+    "start": "webpack-dev-server --open --hot --mode development",
+    "dev": "concurrently \"npm start\" \"npm run server\"",
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "keywords": [
     "react challenge",
@@ -36,6 +40,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^10.0.17",
+    "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   }
