--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.21",
     "@emotion/styled": "^10.0.17",
     "axios": "^0.19.0",
     "react": "^16.10.2",
