--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-npm-debug.log
+# Dependency directory
 node_modules
+
+# Debug log from npm
+npm-debug.log
+
+# Environment Variables should NEVER be published
+.env
